--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 body {
-  background-color: rgb(59, 55, 55);
+  background-color: rgb(37, 34, 34);
+  font-family: abril fatface, sans-serif;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+h1 {
+  color: white;
+  font-size: 50px;
+}
+
+.buttons {
+  display: flex;
+  gap: 10px;
 }
