--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,24 @@ h1 {
 
 .buttons {
   display: flex;
-  gap: 10px;
+  gap: 25px;
 }
 
 #roundAnnouncement {
   font-size: 28px;
 }
+
+#scoreBoard {
+  display: flex;
+  margin: 50px;
+}
+
+button {
+  background-color:rgb(37, 34, 34);
+  color: white;
+  font-family: abril fatface, sans-serif;
+  border-radius: 1em;
+  padding: 2em;
+  border: 2px solid rgb(161, 161, 161);
+  font-size: 16px;
+  }
