--- a/styles.css
+++ b/styles.css
@@ -41,4 +41,22 @@ button {
   padding: 2em;
   border: 2px solid rgb(161, 161, 161);
   font-size: 16px;
-  }
+}
+
+#game-end-board {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px;
+}
+
+#game-end-message {
+  margin: 50px;
+  color: rgb(255, 255, 137);
+  font-size: 40px;
+}
+
+#play-again-button {
+  font-size: 30px;
+  color:rgb(255, 255, 137);
+}
